add feature: progress 3 level (empty, check, valid), dll

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,5 @@
     <string name="input_score">Masukkan Nilai</string>
     <string name="add_score">Tambah Nilai Siswa</string>
     <string name="edit_score">Edit Nilai Siswa</string>
+    <string name="validasi">Validasi</string>
 </resources>
